[package]
name = "tuple_utils"
version = "0.3.0"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]
license = "Apache-2.0/MIT"
description = "A set of utilities to enable higher level operations over tuples."
documentation = "https://docs.rs/tuple_utils"
repository = "https://github.com/csherratt/tuple_utils"

